# ClipMan

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_DB.md  DEVELOPMENT.md  LICENSE  PROJECT_STATUS.md  README.md  README_EN.md  SIGNING_SETUP.md  UPDATES.md  UPDATE_SETUP.md  eslint.config.js  index.html  package-lock.json  package.json  release_notes_1.10.0.md  release_notes_1.5.0.md  release_notes_1.6.0.md  release_notes_1.8.0.md  release_notes_1.8.1.md  release_notes_1.9.1.md  release_notes_1.9.2.md  release_notes_2.0.0.md  release_notes_2.0.1.md  release_notes_2.0.2.md  release_notes_2.1.0.md  release_notes_2.2.0.md  rust-toolchain.toml  test_serialization.rs  test_tauri_api.html  tsconfig.json  tsconfig.node.json  vite.config.js
.claude/: settings.json
.claude/hooks/: check-status-doc.sh  inject-status.sh
.github/: RELEASE_GUIDE.md  RELEASE_NOTES.md  RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  prepare-release.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: DEVELOPMENT_PLAN.md  REDESIGN_SPEC.md  WP_0_0_SPIKE_RESULTS.md
docs/archive/: DEVELOPMENT_PLAN.md  REDESIGN_SPEC.md  WP_0_0_SPIKE_RESULTS.md
docs/dev/: PLAN.md  REVIEW-2026-07-07.md  SPEC-1-capture-pipeline.md  SPEC-2-frontend-content-types.md  SPEC-3-p0-hardening.md  SPEC-4-wave3.md  STATUS.md
scripts/: check-versions.sh  release.sh
src/: app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/src/: accessibility.rs  clipboard.rs  commands.rs  crypto.rs  main.rs  migration.rs  paste.rs  secrets.rs  settings.rs  storage.rs  tray.rs  window.rs
src/lib/: constants.ts  types.ts
src/lib/components/: ClipPreview.svelte  ClipboardItem.svelte  PermissionCheck.svelte  SearchBar.svelte  Toast.svelte
src/lib/components/settings/: AboutSection.svelte  AppearanceSettings.svelte  ClipboardSettings.svelte  GeneralSettings.svelte  Sidebar.svelte  StorageSettings.svelte  TraySettings.svelte
src/lib/components/ui/: Button.svelte  Card.svelte  ConfirmDialog.svelte  Input.svelte  MarkdownContent.svelte  Switch.svelte
src/lib/i18n/: index.svelte.ts
src/lib/stores/: clipboard.svelte.ts  confirm.svelte.ts  router.svelte.ts  selection.svelte.ts  theme.svelte.ts  toast.svelte.ts
src/lib/utils/: clip-items.ts  markdown.ts  now.svelte.ts  platform.ts  request-sequencer.ts  settings.ts  tauri.ts
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
tests/: env.d.ts  selection.test.ts  tsconfig.json
tests/frontend/: anchor-race.test.ts  clip-items.test.ts  clipboard-store.test.ts  confirm-store.test.ts  markdown.test.ts  request-sequencer.test.ts  settings.test.ts  tauri.test.ts
