[package]
name = "clipman"
version = "2.0.1"
description = "Modern clipboard manager for Windows, macOS, and Linux"
authors = ["ClipMan Team"]
license = "MIT"
repository = "https://github.com/RustyPiano/ClipMan"
edition = "2021"
rust-version = "1.96"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2.11.2", features = ["macos-private-api", "tray-icon", "devtools"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-store = "2.4.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"

# Clipboard & System
arboard = "3.4"
enigo = { version = "0.3.0", default-features = false, features = ["x11rb"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Threading"
] }

# Storage & Serialization
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

data-encoding = "2.6"
sha2 = "0.10"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
lru = "0.12"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
clipboard-master = "4.0.0"

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
    "libc",
    "NSApplication",
    "NSPasteboard",
    "NSRunningApplication",
    "NSWindow",
    "NSWorkspace",
] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSObject", "NSString"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
